[#163] JDK8 comatibility - downgrade SR Config to 2.x (3.x is compiled with jdk 11) +   javax.annotation dependency - remove jdk11 new stuff: var, String#isBlank(), InputStream#nullInputStream() , ...